--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,10 +65,11 @@
     <string name="action_import">Import</string>
     <string name="title_activity_import_db">CSV File import</string>
     <string name="import_db">Import CSV file in database</string>
+    <!-- TODO update it since there are two files-->
     <string name="import_db_label">Put a CSV file at the storage root, name it import.csv, and click the button. You\'ll then see your imported movie.</string>
     <string name="import_permission_error_toast">Can\'t import since external storage reading is not allowed for CineLog.</string>
-    <string name="import_error_toast">An error occurred during data import.</string>
-    <string name="import_io_error_toast">An error occurred while trying to find import.csv file. Verify it is located at the root storage and that you have required permissions.</string>
+    <string name="import_error_toast">An error occurred during data import of %s file.</string>
+    <string name="import_io_error_toast">An error occurred while trying to find %s file. Verify it is located at the root storage and that you have required permissions.</string>
     <string name="import_parsing_error_toast">Error while parsing CSV file. Please verify it.</string>
     <string name="import_parsing_line_error_toast">Can\'t save import movie with name %s.</string>
     <string name="import_starting_toast">Import started…</string>
