--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,10 +55,10 @@
 
     <string name="title_activity_export_db">Export data</string>
     <string name="export_db">Export data as CSV</string>
-    <string name="export_db_label">Click the button to export your data as a CSV file. It will be saved as \'export.csv\' at storage root. You will be able to import this backup if you need it.</string>
+    <string name="export_db_label">Click the button to export your data as a CSV file. It will be saved as \'export_movies.csv\' and \'export_series.csv\' at storage root. You will be able to import this backup if you need it.</string>
     <string name="action_export">Export</string>
     <string name="export_start_toast">Export starting…</string>
-    <string name="export_succeeded_toast">… export succeeded. See export.csv file at storage root.</string>
+    <string name="export_succeeded_toast">… export succeeded. See export_movies.csv and export_series.csv files at storage root.</string>
     <string name="export_io_error_toast">An I/O error occurred during export. Verify your permissions.</string>
     <string name="export_permission_error_toast">Can\'t export since external storage writing is not allowed for CineLog.</string>
 
@@ -66,7 +66,7 @@
     <string name="title_activity_import_db">CSV File import</string>
     <string name="import_db">Import CSV file in database</string>
     <!-- TODO update it since there are two files-->
-    <string name="import_db_label">Put a CSV file at the storage root, name it import.csv, and click the button. You\'ll then see your imported movie.</string>
+    <string name="import_db_label">The import process will import movies of import_movies.csv and series of import_series.csv file at the storage root.</string>
     <string name="import_permission_error_toast">Can\'t import since external storage reading is not allowed for CineLog.</string>
     <string name="import_error_toast">An error occurred during data import of %s file.</string>
     <string name="import_io_error_toast">An error occurred while trying to find %s file. Verify it is located at the root storage and that you have required permissions.</string>
