[CineLog / Wishlist] add a toast at wishlist addition + make back button working in wishlist item view

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -110,4 +110,5 @@
     <string name="automatic_export_serie_toast">Sauvegarde automatique des revues de séries effectuée !</string>
 
     <string name="restart_app_please">Redémarrez l\'application pour terminer la mise à jour.</string>
+    <string name="wishlist_item_added">Added to wishlist !</string>
 </resources>
