--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -110,6 +110,14 @@
     <string name="automatic_export_cant_export_serie">An error occurred during automatic save of series.</string>
     <string name="automatic_export_movie_toast">Success of movies automatic save !</string>
     <string name="automatic_export_serie_toast">Success of automatic save of series !</string>
-    <string name="restart_app_please">Please restart the app to complete upgrade.</string>
+
+    <string name="nav_reviews_space">Reviews</string>
+    <string name="nav_wishlist_space">Wishlist</string>
+    <string name="nav_title">Menu</string>
+    <string name="toolbar_subtitle_reviews">Reviews</string>
+    <string name="toolbar_subtitle_wishlist">Wishlist</string>
+    <string name="wishlist_list_activity">Wishlist</string>
     <string name="wishlist_item_added">Added to wishlist !</string>
+
+    <string name="restart_app_please">Please restart the app to complete upgrade.</string>
 </resources>
