--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -109,6 +109,13 @@
     <string name="automatic_export_movie_toast">Sauvegarde automatique des revues de films effectuée !</string>
     <string name="automatic_export_serie_toast">Sauvegarde automatique des revues de séries effectuée !</string>
 
+    <string name="nav_reviews_space">Avis</string>
+    <string name="nav_wishlist_space">À voir</string>
+    <string name="nav_title">Menu</string>
+    <string name="toolbar_subtitle_reviews">Avis</string>
+    <string name="toolbar_subtitle_wishlist">À voir</string>
+    <string name="wishlist_list_activity">À voir</string>
+    <string name="wishlist_item_added">Un(e) de plus à voir !</string>
+
     <string name="restart_app_please">Redémarrez l\'application pour terminer la mise à jour.</string>
-    <string name="wishlist_item_added">Added to wishlist !</string>
 </resources>
