--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -110,12 +110,14 @@
     <string name="automatic_export_serie_toast">Sauvegarde automatique des revues de séries effectuée !</string>
 
     <string name="nav_reviews_space">Avis</string>
-    <string name="nav_wishlist_space">À voir</string>
+    <string name="nav_wishlist_space">Liste de souhaits</string>
     <string name="nav_title">Menu</string>
-    <string name="toolbar_subtitle_reviews">Avis</string>
-    <string name="toolbar_subtitle_wishlist">À voir</string>
-    <string name="wishlist_list_activity">À voir</string>
+    <string name="toolbar_title_reviews">Avis</string>
+    <string name="toolbar_title_wishlist">Liste de souhaits</string>
+    <string name="wishlist_list_activity">Liste de souhaits</string>
     <string name="wishlist_item_added">Un(e) de plus à voir !</string>
 
     <string name="restart_app_please">Redémarrez l\'application pour terminer la mise à jour.</string>
+    <string name="title_fragment_wishlist_movie">Films à voir</string>
+    <string name="title_fragment_wishlist_serie">Séries à voir</string>
 </resources>
