--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,10 +113,13 @@
     <string name="nav_reviews_space">Reviews</string>
     <string name="nav_wishlist_space">Wishlist</string>
     <string name="nav_title">Menu</string>
-    <string name="toolbar_subtitle_reviews">Reviews</string>
-    <string name="toolbar_subtitle_wishlist">Wishlist</string>
+    <string name="toolbar_title_reviews">Reviews</string>
+    <string name="toolbar_title_wishlist">Wishlist</string>
     <string name="wishlist_list_activity">Wishlist</string>
     <string name="wishlist_item_added">Added to wishlist !</string>
+
+    <string name="title_fragment_wishlist_movie">Movies wishlist</string>
+    <string name="title_fragment_wishlist_serie">Series wishlist</string>
 
     <string name="restart_app_please">Please restart the app to complete upgrade.</string>
 
