--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,6 @@
 
     <string name="restart_app_please">Please restart the app to complete upgrade.</string>
 
+    <string name="unknown_year">Unknown release year</string>
+
 </resources>
