--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -124,4 +124,14 @@
     <string name="title_fragment_wishlist_serie">Séries à voir</string>
 
     <string name="unknown_year">Année inconnue</string>
+
+    <string name="import_movies_status">Import des avis de films:</string>
+    <string name="import_series_status">Import des avis de séries:</string>
+    <string name="import_wishlist_series_status">Import de la liste de souhaits de films:</string>
+    <string name="import_wishlist_movies_status">Import de la liste de souhaits des films:</string>
+
+    <string name="import_status_waiting">en attente</string>
+    <string name="import_status_success">terminé</string>
+    <string name="import_status_no_file">fichier non trouvé</string>
+    <string name="import_status_failed">en erreur</string>
 </resources>
