--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -127,4 +127,13 @@
 
     <string name="unknown_year">Rok wydania nieznany</string>
 
+    <string name="import_movies_status">Movie reviews import:</string>
+    <string name="import_series_status">Serie reviews import:</string>
+    <string name="import_wishlist_series_status">Serie wishlist import:</string>
+    <string name="import_wishlist_movies_status">Movie wishlist import:</string>
+
+    <string name="import_status_waiting">waiting</string>
+    <string name="import_status_success">ended</string>
+    <string name="import_status_no_file">file not found</string>
+    <string name="import_status_failed">in error</string>
 </resources>
