[ CineLog ] translate tab items and avoid shadow by placing it in toolbar

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -138,4 +138,6 @@
 
     <string name="serie_episode_season_number_label">Season</string>
     <string name="serie_episode_episode_number_label">Episode</string>
+    <string name="title_fragment_serie_episodes">Episoden</string>
+    <string name="title_fragment_serie_general">Allgemeine Daten</string>
 </resources>
