--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,6 @@
 
     <string name="serie_episode_season_number_label">Season</string>
     <string name="serie_episode_episode_number_label">Episode</string>
+    <string name="title_fragment_serie_general">General</string>
+    <string name="title_fragment_serie_episodes">Episodes</string>
 </resources>
