--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -138,4 +138,5 @@
     <string name="serie_episode_episode_number_label">Épisode</string>
     <string name="title_fragment_serie_episodes">Épisodes</string>
     <string name="title_fragment_serie_general">Général</string>
+    <string name="serie_episode_delete_hint">Appuyez longuement pour supprimer le visionnage</string>
 </resources>
