--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -138,4 +138,5 @@
     <string name="serie_episode_episode_number_label">Episode</string>
     <string name="title_fragment_serie_episodes">Episidios</string>
     <string name="title_fragment_serie_general">General</string>
+    <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
 </resources>
