--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="serie_episode_episode_number_label">Episode</string>
     <string name="title_fragment_serie_general">General</string>
     <string name="title_fragment_serie_episodes">Episodes</string>
+    <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
 </resources>
