--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -139,4 +139,5 @@
     <string name="title_fragment_serie_episodes">Episidios</string>
     <string name="title_fragment_serie_general">General</string>
     <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
+    <string name="default_movie_sort_type_title">Movie review sort</string>
 </resources>
