--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -139,4 +139,5 @@
     <string name="title_fragment_serie_episodes">Épisodes</string>
     <string name="title_fragment_serie_general">Général</string>
     <string name="serie_episode_delete_hint">Appuyez longuement pour supprimer le visionnage</string>
+    <string name="default_movie_sort_type_title">Ordre de la liste des films</string>
 </resources>
