--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -142,4 +142,5 @@
     <string name="title_fragment_serie_general">Algemeen</string>
     <string name="title_fragment_serie_episodes">Afleveringen</string>
     <string name="serie_episode_delete_hint">Houd lang ingedrukt om kijkinformatie te wissen</string>
+    <string name="default_movie_sort_type_title">Movie review sort</string>
 </resources>
