--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -142,4 +142,5 @@
     <string name="title_fragment_serie_general">General</string>
     <string name="title_fragment_serie_episodes">Episodes</string>
     <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
+    <string name="default_movie_sort_type_title">Movie review sort</string>
 </resources>
