--- a/app/src/main/res/values-cn/strings.xml
+++ b/app/src/main/res/values-cn/strings.xml
@@ -78,6 +78,8 @@
 
     <string name="title_activity_settings">设置</string>
     <string name="default_tmdb_language_title">TmDb 数据语言</string>
+	<string name="default_movie_sort_type_title">影评排序</string>
+    <string name="default_serie_sort_type_title">剧评排序</string>
     <string name="default_maximum_rating">影评数上限</string>
     <string name="default_maximum_rating_summary">输入你想要为新电影设置的默认的影评最多数目</string>
     <string name="default_maximum_rating_dialog">输入你想要为新电影设置的最高分</string>
@@ -143,6 +145,4 @@
     <string name="title_fragment_serie_general">一般</string>
     <string name="title_fragment_serie_episodes">集</string>
     <string name="serie_episode_delete_hint">请长按删除观看资料</string>
-    <string name="default_movie_sort_type_title">Movie review sort</string>
-    <string name="default_serie_sort_type_title">Serie review sort</string>
 </resources>
